; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_countrycode.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_countrycode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_SYSTEM_DEFAULT = common dso_local global i32 0, align 4
@LOCALE_ICOUNTRY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @get_countrycode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_countrycode() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* @heap_alloc(i32 24)
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load i32, i32* @LOCALE_SYSTEM_DEFAULT, align 4
  %7 = load i32, i32* @LOCALE_ICOUNTRY, align 4
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @GetLocaleInfoW(i32 %6, i32 %7, i32* %8, i32 6)
  br label %10

10:                                               ; preds = %5, %0
  %11 = load i32*, i32** %1, align 8
  ret i32* %11
}

declare dso_local i32* @heap_alloc(i32) #1

declare dso_local i32 @GetLocaleInfoW(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
